[tool.poetry]
name = "neuromorphopy"
version = "0.0.1"
description = "Lightweight python package for downloading neuron morphologies from the NeuroMorpho archives."
authors = ["Kyle Puhger <fkrpuhger@gmail.com>"]
repository = "https://github.com/kpeez/neuromorphopy"
documentation = "https://kpeez.github.io/neuromorphopy/"
readme = "README.md"
packages = [
  {include = "neuromorphopy"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tqdm = "^4.65.0"
numpy = "^1.26.3"
pandas = "^2.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "^1.8"
pre-commit = "^2.21.0"
types-requests = "^2.31.0.20240106"
pandas-stubs = "*"

[tool.poetry.group.test.dependencies]
pytest = "^7.4"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.ruff]
line-length = 100
target-version = "py310"
fix = true
select = [
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pylint
    "PL",
    # isort
    "I",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-comprehensions
    "C4",
    # ruff
    "RUF",
]



[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "D107"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
files = ["neuromorphopy"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = false
warn_unused_ignores = true
show_error_codes = true
exclude = [
    '\.venv',
    'tests'
]

[[tool.mypy.overrides]]
module = [
"neuromorpho_api"
]
ignore_missing_imports = true