[project]
name = "neuromorphopy"
version = "0.0.1"
requires-python = ">=3.11"
description = "Lightweight python package for downloading neuron morphologies from the NeuroMorpho archives."
authors = [{ name = "Kyle Puhger", email = "krpuhger@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
  "tqdm",
  "numpy",
  "pandas",
]

[tool.uv]
dev-dependencies = [
  "pip",
  "ruff",
  "mypy",
  "pre-commit",
  "types-requests",
  "pandas-stubs",
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
]

[project.urls]
repository = "https://github.com/kpeez/neuromorphopy"
documentation = "https://kpeez.github.io/neuromorphopy/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "external"]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  "W",
  # pyflakes
  "F",
  # pylint
  "PL",
  # isort
  "I",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # flake8-comprehensions
  "C4",
  # ruff
  "RUF",
]
fixable = ["ALL"]
ignore = [
  # too many arguments
  "PLR0913",
  # too many local variables
  "PLR0914",
  # too many statements
  "PLR0915",
  # magic number
  "PLR2004",
  # line too long
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
files = ["neuromorphopy"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = false
warn_unused_ignores = true
show_error_codes = true
exclude = [
    '\.venv',
    'tests'
]

[[tool.mypy.overrides]]
module = ["neuromorpho_api"]
ignore_missing_imports = true
warn_return_any = false
disallow_any_unimported = false
disable_error_code = "attr-defined"
